# FOAgent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TECH_DESIGN_AGENT_FILE_ORGANIZER.md
.github/workflows/: build.yml  lint.yml  tests.yml
app/: cli.py  pyproject.toml  server.py
app/agents/: __init__.py  agent_a_association.py  agent_b_naming.py  agent_classifier.py  agent_tool_classifier.py  harness_agent.py  llm_client.py
app/core/: config.py  logging.py
app/graph/: state.py
app/schemas/: __init__.py
app/services/: audit_service.py  task_service.py
app/storage/: __init__.py
app/tools/: bash_create_dirs.sh  bash_dry_run_moves.sh  bash_move_files.sh  bash_rollback.sh  get_file_info.sh  scan_parent_dir.sh  tool_runner.py
app/utils/: bucket.py
docs/: BASH_TOOL_AND_EXECUTION_SCHEMA.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExecutionView.tsx  FolderInput.tsx  PlanView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
