[project]
name = "agent-file-organizer"
version = "0.1.0"
description = "Agent 文件分类整理系统 - 前端仅提供路径，Agent 按工作流调用 bash 工具完成文件分类整理"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.33.1",
]

[project.scripts]
agent-organizer = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
