[project]
name = "agent-file-organizer"
version = "0.1.0"
description = "Agent 文件分类整理系统"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.33.1",
]

[project.scripts]
agent-organizer = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
